samples/_failures_safe/1761040420_bea5c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac24ad96.c: In function ‘main’:
./samples/SAFE/__tmp_ac24ad96.c:135:5: error: expected declaration or statement at end of input
  135 |     if (fgets((char*)input_buffer, sizeof(input_buffer), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_ac24ad96.c:135:5: error: expected declaration or statement at end of input
